// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StageContainer > matches snapshot (camera loading) 1`] = `
.c0 {
  position: relative;
  border: 1px solid #d1d5db;
  border-radius: 12px;
  overflow: hidden;
  background: #111827;
  aspect-ratio: 16/9;
}

.c1 {
  position: relative;
  width: 100%;
  height: 100%;
  min-height: 0;
}

.c2 {
  position: absolute;
  inset: 0;
  z-index: 1;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 16px;
  background: rgba(17, 24, 39, 0.88);
}

.c3 {
  width: 44px;
  height: 44px;
  border: 3px solid rgba(255, 255, 255, 0.15);
  border-top-color: #34d399;
  border-radius: 50%;
  animation: k0 0.75s linear infinite;
}

.c4 {
  margin: 0;
  color: #e5e7eb;
  font-size: 15px;
  font-weight: 500;
}

.c5 {
  width: 100%;
  height: 100%;
  display: block;
}

@keyframes k0 {
  to {
    transform: rotate(360deg);
  }
}

<div
  class="c0"
>
  <div
    aria-busy="true"
    class="c1"
  >
    <div
      aria-live="polite"
      class="c2"
      role="status"
    >
      <span
        aria-hidden="true"
        class="c3"
      />
      <p
        class="c4"
      >
        Подключение камеры…
      </p>
    </div>
    <canvas
      class="c5"
    />
  </div>
</div>
`;

exports[`StageContainer > matches snapshot (live canvas) 1`] = `
.c0 {
  position: relative;
  border: 1px solid #d1d5db;
  border-radius: 12px;
  overflow: hidden;
  background: #111827;
  aspect-ratio: 16/9;
}

.c1 {
  position: relative;
  width: 100%;
  height: 100%;
  min-height: 0;
}

.c2 {
  width: 100%;
  height: 100%;
  display: block;
}

<div
  class="c0"
>
  <div
    aria-busy="false"
    class="c1"
  >
    <canvas
      class="c2"
    />
  </div>
</div>
`;

exports[`StageContainer > matches snapshot (paused) 1`] = `
.c0 {
  position: relative;
  border: 1px solid #d1d5db;
  border-radius: 12px;
  overflow: hidden;
  background: #111827;
  aspect-ratio: 16/9;
}

.c1 {
  position: relative;
  width: 100%;
  height: 100%;
  min-height: 0;
}

.c2 {
  width: 100%;
  height: 100%;
  display: grid;
  place-items: center;
  padding: 16px;
}

.c3 {
  margin: 0;
  color: #e5e7eb;
  font-size: 24px;
  font-weight: 600;
  text-align: center;
}

<div
  class="c0"
>
  <div
    aria-busy="false"
    class="c1"
  >
    <div
      aria-live="polite"
      class="c2"
      role="status"
    >
      <p
        class="c3"
      >
        Упражнение приостановлено
      </p>
    </div>
  </div>
</div>
`;
